crates/service/tests/diagnostics/snapshots/features__diagnostics__type_misuse__switch.snap
---
source: crates/service/tests/diagnostics/type_misuse.rs
expression: response
---
{
  "kind": "full",
  "items": [
    {
      "range": {
        "start": {
          "line": 20,
          "character": 11
        },
        "end": {
          "line": 20,
          "character": 15
        }
      },
      "severity": 1,
      "code": "type-misuse",
      "source": "wat",
      "message": "expected type is cont, but type of `$ft1` is func",
      "relatedInformation": [
        {
          "location": {
            "uri": "untitled:test",
            "range": {
              "start": {
                "line": 2,
                "character": 2
              },
              "end": {
                "line": 2,
                "character": 32
              }
            }
          },
          "message": "func type defined here"
        }
      ]
    },
    {
      "range": {
        "start": {
          "line": 25,
          "character": 11
        },
        "end": {
          "line": 25,
          "character": 15
        }
      },
      "severity": 1,
      "code": "type-misuse",
      "source": "wat",
      "message": "last param type of cont type `$ct1` must be continuation reference type",
      "relatedInformation": [
        {
          "location": {
            "uri": "untitled:test",
            "range": {
              "start": {
                "line": 3,
                "character": 2
              },
              "end": {
                "line": 3,
                "character": 25
              }
            }
          },
          "message": "cont type `$ct1` defined here"
        }
      ]
    },
    {
      "range": {
        "start": {
          "line": 35,
          "character": 16
        },
        "end": {
          "line": 35,
          "character": 19
        }
      },
      "severity": 1,
      "code": "type-misuse",
      "source": "wat",
      "message": "result types of cont type `$ct2` must match result types of tag `$t3`",
      "relatedInformation": [
        {
          "location": {
            "uri": "untitled:test",
            "range": {
              "start": {
                "line": 5,
                "character": 2
              },
              "end": {
                "line": 5,
                "character": 25
              }
            }
          },
          "message": "cont type `$ct2` defined here"
        },
        {
          "location": {
            "uri": "untitled:test",
            "range": {
              "start": {
                "line": 11,
                "character": 2
              },
              "end": {
                "line": 11,
                "character": 24
              }
            }
          },
          "message": "tag `$t3` defined here"
        }
      ]
    },
    {
      "range": {
        "start": {
          "line": 35,
          "character": 16
        },
        "end": {
          "line": 35,
          "character": 19
        }
      },
      "severity": 1,
      "code": "type-misuse",
      "source": "wat",
      "message": "result types of tag `$t3` must match result types of cont type `$ct3`",
      "relatedInformation": [
        {
          "location": {
            "uri": "untitled:test",
            "range": {
              "start": {
                "line": 11,
                "character": 2
              },
              "end": {
                "line": 11,
                "character": 24
              }
            }
          },
          "message": "tag `$t3` defined here"
        },
        {
          "location": {
            "uri": "untitled:test",
            "range": {
              "start": {
                "line": 7,
                "character": 2
              },
              "end": {
                "line": 7,
                "character": 25
              }
            }
          },
          "message": "cont type `$ct3` defined here"
        }
      ]
    }
  ]
}
