crates/service/tests/diagnostics/snapshots/features__diagnostics__type_misuse__table_init.snap
---
source: crates/service/tests/diagnostics/type_misuse.rs
expression: response
---
{
  "kind": "full",
  "items": [
    {
      "range": {
        "start": {
          "line": 7,
          "character": 4
        },
        "end": {
          "line": 10,
          "character": 20
        }
      },
      "severity": 1,
      "code": "type-misuse",
      "source": "wat",
      "message": "ref type `(ref null func)` of element segment `$e1` doesn't match ref type `(ref null extern)` of table `$t1`",
      "relatedInformation": [
        {
          "location": {
            "uri": "untitled:test",
            "range": {
              "start": {
                "line": 3,
                "character": 2
              },
              "end": {
                "line": 3,
                "character": 25
              }
            }
          },
          "message": "table `$t1` defined here"
        },
        {
          "location": {
            "uri": "untitled:test",
            "range": {
              "start": {
                "line": 4,
                "character": 2
              },
              "end": {
                "line": 5,
                "character": 18
              }
            }
          },
          "message": "element segment `$e1` defined here"
        }
      ]
    },
    {
      "range": {
        "start": {
          "line": 16,
          "character": 4
        },
        "end": {
          "line": 19,
          "character": 20
        }
      },
      "severity": 1,
      "code": "type-misuse",
      "source": "wat",
      "message": "ref type `(ref null extern)` of element segment `$e2` doesn't match ref type `(ref null func)` of table `$t2`",
      "relatedInformation": [
        {
          "location": {
            "uri": "untitled:test",
            "range": {
              "start": {
                "line": 12,
                "character": 2
              },
              "end": {
                "line": 12,
                "character": 23
              }
            }
          },
          "message": "table `$t2` defined here"
        },
        {
          "location": {
            "uri": "untitled:test",
            "range": {
              "start": {
                "line": 13,
                "character": 2
              },
              "end": {
                "line": 14,
                "character": 22
              }
            }
          },
          "message": "element segment `$e2` defined here"
        }
      ]
    }
  ]
}
