crates/service/tests/diagnostics/snapshots/features__diagnostics__type_misuse__table_ref_type.snap
---
source: crates/service/tests/diagnostics/type_misuse.rs
expression: response
---
{
  "kind": "full",
  "items": [
    {
      "range": {
        "start": {
          "line": 14,
          "character": 18
        },
        "end": {
          "line": 14,
          "character": 19
        }
      },
      "severity": 1,
      "code": "type-misuse",
      "source": "wat",
      "message": "ref type of table `1` must match `(ref null func)`"
    },
    {
      "range": {
        "start": {
          "line": 17,
          "character": 25
        },
        "end": {
          "line": 17,
          "character": 26
        }
      },
      "severity": 1,
      "code": "type-misuse",
      "source": "wat",
      "message": "ref type of table `1` must match `(ref null func)`"
    }
  ]
}
